# indicator-network

./: CMakeLists.txt
data/: com.ubuntu.connectivity1.Private.xml
debian/: changelog  control  rules
doc/qt/qml/: CMakeLists.txt
po/: am.po  ar.po  ast.po  az.po  be.po  bg.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  gu.po  he.po  hr.po  hu.po  hy.po  ia.po  id.po  indicator-network.pot  is.po  it.po  (+35 more)
src/agent/: SecretAgent.cpp  SecretRequest.cpp  agent-main.cpp
src/connectivity-api/connectivity-qt/connectivityqt/: openvpn-connection.h  vpn-connections-list-model.cpp  vpn-connections-list-model.h
src/indicator/: CMakeLists.txt  factory.cpp  icons.cpp  main.cpp
src/indicator/agent/: main.cpp
src/indicator/connectivity-service/: connectivity-service.cpp  connectivity-service.h
src/indicator/menuitems/: wifi-link-item.cpp
src/indicator/nmofono/: connectivity-service-settings.cpp  hotspot-manager.cpp  hotspot-manager.h  link.h  manager-impl.cpp  manager-impl.h
src/indicator/nmofono/wwan/: modem.h  (+3 more)
src/indicator/sections/: vpn-section.cpp  wifi-section.cpp  wwan-section.cpp
src/util/: localisation.h
src/vpn-editor/Openvpn/: AdvancedSecurity.qml
tests/integration/: CMakeLists.txt  indicator-network-test-base.cpp  indicator-network-test-base.h  sample.ovpn  test-connectivity-api.cpp  test-indicator-vpn.cpp  test-indicator.cpp
tests/unit/secret-agent/: secret-agent-main.cpp
tests/utils/: main.cpp
(+7 files in other folders)
